trying to fix spacing at top of lists on group pagge

--- a/assets/css/sfhiv_styles.css
+++ b/assets/css/sfhiv_styles.css
@@ -12041,6 +12041,10 @@ h4 a:hover {
 .list li {
   list-style-type: none;
 }
+.list .list-title {
+  margin-top: 14px;
+  clear: both;
+}
 .list .list-heading {
   padding: 7px 14px 7px;
   font-size: 18px;
