--- a/assets/less/layout.less
+++ b/assets/less/layout.less
@@ -330,6 +330,10 @@
 	.list-title{
 	
 	}
+	.list-title{
+		margin-top:@space_size*2;
+		clear:both;
+	}
 	.list-heading{
 		padding:@space_size @space_size*2 @space_size;
 		font-size:@big_font_size;
